--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Rafal Potasz",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nedb": "^1.8.0"
   }
 }
